bug fix on mobile

--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@ img {
   width: 1200px;
   margin: 0 auto;
 }
+@media screen and (max-width: 430px) {
+  .card {
+    width: 100%;
+    margin: 0;
+  }
+}
